<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="#FFF1D5"
    >


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lunchdata"
            android:layout_width="324dp"
            android:layout_height="325dp"
            android:fontFamily="@font/bdh"
            android:text=""
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/plate2"

            app:layout_constraintVertical_bias="0.19"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/speechbubble"
            android:layout_width="307dp"
            android:layout_height="65dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/speech_bubble"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.975"
            app:srcCompat="@drawable/speechbubble" />

        <TextView
            android:id="@+id/speechText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F6F6ED"
            android:fontFamily="@font/bdh"
            android:text="@string/evaluate_lunch"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/speechbubble"
            app:layout_constraintEnd_toEndOf="@+id/speechbubble"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/speechbubble"
            app:layout_constraintTop_toTopOf="@+id/speechbubble"
            app:layout_constraintVertical_bias="0.32" />

        <RatingBar
            android:id="@+id/ratingbar"
            style="@style/CustomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:numStars="5"
            android:rating="4"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:stepSize="1"
            app:layout_constraintBottom_toTopOf="@+id/speechbubble"
            app:layout_constraintEnd_toStartOf="@+id/ratingSubmit"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/speechbubble"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.987" />

        <ImageButton
            android:id="@+id/ratingSubmit"
            android:layout_width="49dp"
            android:layout_height="41dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/rating_bar_submit_button"
            android:fontFamily="@font/bdh"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/speechbubble"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ratingbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.996"
            app:srcCompat="@drawable/submit" />
        <ImageView
            android:id="@+id/plate2"
            android:layout_width="258dp"
            android:layout_height="193dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.264"
             />


        <ImageButton
            android:id="@+id/gif"
            android:layout_width="100dp"
            android:layout_height="95dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/gif_image"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/speechbubble"
            app:layout_constraintEnd_toStartOf="@+id/speechbubble"
            app:layout_constraintTop_toTopOf="@id/speechbubble"
            app:layout_constraintVertical_bias="0.266" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/plate"
        android:layout_width="258dp"
        android:layout_height="193dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/red_plate_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        app:srcCompat="@drawable/red_plate" />


    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:fontFamily="@font/bdh"
        android:text="@string/date_here"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/speechbubble2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/speechbubble2"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:contentDescription="@string/speech_bubble"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/plate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/speechbubble_diff" />

    <TextView
        android:id="@+id/speechText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bdh"
        android:background="#F6F6ED"
        android:gravity = "center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/speechbubble2"
        app:layout_constraintEnd_toEndOf="@+id/speechbubble2"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/speechbubble2"
        app:layout_constraintTop_toTopOf="@+id/speechbubble2"
        app:layout_constraintVertical_bias="0.586" />


    <TextView
        android:id="@+id/name_place"

        android:layout_width="0dp"
        android:layout_height="34dp"
        android:fontFamily="@font/bdh"
        android:gravity="center"
        android:text="@string/name_here"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />


    <ImageButton
        android:id="@+id/color_change"
        android:contentDescription="@string/color_changing_button"
        android:layout_width="56dp"
        android:layout_height="59dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/wand" />


    <ImageView
        android:id="@+id/display"
        android:layout_width="391dp"
        android:layout_height="356dp"
        android:contentDescription="@string/display_screen"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        app:srcCompat="@drawable/display" />

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/exit_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/display"
        app:layout_constraintEnd_toEndOf="@+id/display"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="@+id/display"
        app:layout_constraintTop_toTopOf="@+id/display"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/exit_button" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="317dp"
        android:layout_height="216dp"
        android:autofillHints="@string/write_opinions"
        android:background="@drawable/box_border"
        android:ems="10"
        android:fontFamily="@font/bdh"
        android:gravity="center"
        android:hint="@string/write_opinions"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/display"
        app:layout_constraintEnd_toEndOf="@+id/display"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/display"
        app:layout_constraintTop_toTopOf="@+id/display"
        app:layout_constraintVertical_bias="0.713" />

    <TextView
        android:id="@+id/comment_section"
        android:layout_width="311dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"

        android:background="@drawable/text_border"
        android:fontFamily="@font/bdh"
        android:gravity="center"
        android:text="@string/submit_opinion"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/comment"
        app:layout_constraintEnd_toEndOf="@+id/display"
        app:layout_constraintStart_toStartOf="@+id/display"
        app:layout_constraintTop_toTopOf="@+id/display"
        app:layout_constraintVertical_bias="0.759" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="74dp"
        android:layout_height="60dp"
        android:background="@drawable/star"
        android:fontFamily="@font/bdh"
        android:gravity="center"
        android:text="@string/submitt"
        android:textColor="@color/white"
        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="@+id/display"
        app:layout_constraintEnd_toEndOf="@+id/display"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="@+id/display"
        app:layout_constraintTop_toTopOf="@+id/display"
        app:layout_constraintVertical_bias="0.962" />

</androidx.constraintlayout.widget.ConstraintLayout>